footer + content changes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h3 class="text-center pb-3">Aggressive Defense Strategies</h3>
           <p class="text-center px-4">
             As an experienced attorney who has worked in both the public and
-            private sectors, I've fought for hundreds of clients. I know how the
+            private sectors, I've fought for thousands of clients. I know how the
             state builds its case—and, more importantly, how to dismantle it.
             I'll fight aggressively to protect your rights, day and night.
           </p>
@@ -155,8 +155,11 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Kelefas Law. All rights reserved.</p>
-    <p>Nothing on this website should be construed as legal advice. The attorney-client relationship does not form until a contract has been put in place.</p>
+  </footer>
+
+  <footer class="py-3 my-4">
+    <p class="text-center">&copy; 2025 Kelefas Law. All rights reserved.</p>
+    <p class="text-center">Nothing on this website should be construed as legal advice. The attorney-client relationship does not form until a contract has been put in place.</p>
   </footer>
 
   <!-- Scripts -->
