--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kelefas Law</title>
+  <title>Kelefas Law - Unmatched Trial Experience</title>
+  <meta name="description" content="Kelefas Law - Unmatched Trial Experience">
+  <meta name="robots" content="index, follow">
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Archivo&display=swap"
     rel="stylesheet"
   />
+  <!-- Bootstrap -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
     crossorigin="anonymous"
   />
+  <!-- Custom Styles -->
   <link rel="stylesheet" href="css/presets.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <!-- Nav -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand d-lg-none" href="#">KELEFAS LAW</a>
+      <a class="navbar-brand d-lg-none" href="/">KELEFAS LAW</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -37,20 +42,20 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Practice Areas</a>
+            <a class="nav-link" href="/practice.html">Practice Areas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
-      <a class="navbar-brand d-none d-lg-block mx-auto" href="#">KELEFAS LAW</a>
+      <a class="navbar-brand d-none d-lg-block" href="/">KELEFAS LAW</a>
     </div>
   </nav>
   <!-- Body -->
@@ -111,8 +116,8 @@
                         If you’ve been accused of a crime, you need immediate, strong representation. Our dedicated team has extensive experience successfully handling misdemeanor and felony cases. We’re committed to building a robust defense strategy to achieve the best possible outcome. 
                     </p>
                     <div class="text-center">
-                        <button href="/about" type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button href="#contact" type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
                 <div class="col-md-6 py-4">
@@ -122,8 +127,8 @@
                         Facing DUI charges can be stressful and confusing. Our experienced attorneys know exactly how to defend your rights, protect your driving privileges, and reduce or eliminate penalties. Don’t risk your future—get aggressive, knowledgeable defense on your side.
                     </p>
                     <div class="text-center">
-                        <button href="/about" type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button href="#contact" type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
@@ -135,8 +140,8 @@
                         Traffic offenses can quickly escalate, affecting your driving privileges and insurance. Our attorneys aggressively contest traffic citations to minimize penalties and protect your license. Act now to keep your record clean.  
                     </p>
                     <div class="text-center">
-                        <button href="/about" type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button href="#contact" type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
                 <div class="col-md-6 py-4">
@@ -146,8 +151,8 @@
                         Facing a restraining or injunction order can dramatically impact your life and reputation. Our skilled legal team provides dedicated representation to protect your rights and defend your interests. Let us fight to resolve your situation quickly and effectively. 
                     </p>
                     <div class="text-center py-2">
-                        <button href="/about" type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button href="#contact" type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
@@ -157,19 +162,19 @@
     
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     Criminal Defense
                 </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionAreas">
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionAreas">
                 <div class="accordion-body">
                     <img src="img/CriminalDefense.webp" alt="" class="img-fluid"/>
                     <p class="py-2">
                         If you’ve been accused of a crime, you need immediate, strong representation. Our dedicated team has extensive experience successfully handling misdemeanor and felony cases. We’re committed to building a robust defense strategy to achieve the best possible outcome. 
                     </p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
@@ -188,8 +193,8 @@
                         Facing DUI charges can be stressful and confusing. Our experienced attorneys know exactly how to defend your rights, protect your driving privileges, and reduce or eliminate penalties. Don’t risk your future—get aggressive, knowledgeable defense on your side.
                     </p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
@@ -208,8 +213,8 @@
                         Traffic offenses can quickly escalate, affecting your driving privileges and insurance. Our attorneys aggressively contest traffic citations to minimize penalties and protect your license. Act now to keep your record clean. 
                     </p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button type="button" class="btn btn-lg btn-secondary">Contact</button>
+                      <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                      <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
@@ -228,13 +233,48 @@
                         Facing a restraining or injunction order can dramatically impact your life and reputation. Our skilled legal team provides dedicated representation to protect your rights and defend your interests. Let us fight to resolve your situation quickly and effectively. 
                     </p>
                     <div class="text-center">
-                        <button type="button" class="btn btn-lg btn-primary">Learn more</button>
-                        <button type="button" class="btn btn-lg btn-secondary">Contact</button>
+                        <a class="btn btn-lg btn-primary" href="/practice.html">Learn more</a>
+                        <a class="btn btn-lg btn-secondary" href="#contact">Contact</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+  </section>
+
+  <section id="contact" class="container">
+    <h2 class="display-6 text-center mt-4">Contact Us</h2>
+    <form id="ContactForm" action="https://api.web3forms.com/submit" method="POST">
+      <input type="hidden" name="access_key" value="40756461-f411-4ac4-9a35-c339503d02f4">
+      <input type="hidden" name="subject" value="KelefasLaw.com: New Contact Form Submission">
+
+      <div class="row pb-2">
+        <label for="name">Name</label>
+        <input type="text" name="name" required>
+      </div>
+      <div class="row pb-2">
+        <label for="email">E-mail</label>
+        <input type="email" name="email" required>
+      </div>
+      <div class="row pb-2">
+        <label for="phone">Phone #</label>
+        <input type="tel"
+        id="phone"
+        name="phone"
+        required>
+      </div>
+      <div class="row pb-2">
+        <label for="message">Message</label>
+        <textarea name="message" rows="6" required></textarea>
+      </div>
+      
+      <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+      <input type="hidden" name="redirect" value="/thankyou.html">
+  
+      <div class="row">
+        <button type="submit" class="btn btn-lg btn-secondary">Submit Form</button>
+      </div>
+    </form>
   </section>
 
   <!-- Footer -->
@@ -246,11 +286,15 @@
     <p class="text-center">Nothing on this website should be construed as legal advice. The attorney-client relationship does not form until a contract has been put in place.</p>
   </footer>
 
-  <!-- Scripts -->
+  <!-- Bootstrap -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"
   ></script>
-  <script src="script.js" defer></script>
+  <!-- jQuery and jQuery Validation Plugin -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+  <!-- Custom Scripts -->
+  <script src="js/script.js" defer></script>
 </body>
