--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               About Us
             </button>
             <button
-              href="#Contact"
+              href="#contact"
               type="button"
               class="btn btn-lg btn-secondary"
             >
